v0.11/7/7.10.tf
resource "aws_nat_gateway" "example" {
  allocation_id = "${aws_eip.nat_gateway.id}"
  subnet_id     = "${aws_subnet.public.id}"
  depends_on    = ["aws_internet_gateway.example"]
}
