v0.11/7/7.17.tf
resource "aws_security_group" "example" {
  name   = "example"
  vpc_id = "${aws_vpc.example.id}"
}
