v0.11/7/7.3.tf
resource "aws_internet_gateway" "example" {
  vpc_id = "${aws_vpc.example.id}"
}
