v0.11/7/7.7.tf
resource "aws_subnet" "private" {
  vpc_id                  = "${aws_vpc.example.id}"
  cidr_block              = "10.0.64.0/24"
  availability_zone       = "ap-northeast-1a"
  map_public_ip_on_launch = false
}
